--- a/project_2ndhalf.ipynb
+++ b/project_2ndhalf.ipynb
@@ -664,8 +664,8 @@
     "    \"\"\"Compute the distance between two songs, represented as rows.\n",
     "    \n",
     "    Only the features named x_feature and y_feature are used when computing the distance.\"\"\"\n",
-    "    row0 = ...\n",
-    "    row1 = ...\n",
+    "    row0 = row_for_title(title0)\n",
+    "    row1 = row_for_title(title1)\n",
     "    ...\n",
     "\n",
     "for song in make_array(\"Lookin' for Love\", \"Insane In The Brain\"):\n",
