--- a/project_2ndhalf.ipynb
+++ b/project_2ndhalf.ipynb
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -592,10 +592,10 @@
     {
      "data": {
       "text/plain": [
-       "0.10015084884546251"
+       "0.033828944324596891"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
    "source": [
     "in_your_eyes = row_for_title(\"In Your Eyes\")\n",
     "sangria_wine = row_for_title(\"Sangria Wine\")\n",
-    "temp = [(in_your_eyes.item('like') - in_your_eyes.item('love'))**2, (sangria_wine.item('like') - sangria_wine.item('love'))**2 ]\n",
+    "temp = [(in_your_eyes.item('like') - sangria_wine.item('like'))**2, (in_your_eyes.item('love') - sangria_wine.item('love'))**2 ]\n",
     "country_distance = np.sqrt(np.sum(temp))\n",
     "country_distance"
    ]
@@ -651,14 +651,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lookin' for Love distance:\t 0.0178540259516\n",
+      "Insane In The Brain distance:\t 0.0601087823407\n"
+     ]
+    }
+   ],
    "source": [
     "def distance_two_features(title0, title1, x_feature, y_feature):\n",
     "    \"\"\"Compute the distance between two songs, represented as rows.\n",
@@ -666,7 +675,12 @@
     "    Only the features named x_feature and y_feature are used when computing the distance.\"\"\"\n",
     "    row0 = row_for_title(title0)\n",
     "    row1 = row_for_title(title1)\n",
-    "    ...\n",
+    "    x1 = row0.item(x_feature)\n",
+    "    x2 = row1.item(x_feature)\n",
+    "    y1 = row0.item(y_feature)\n",
+    "    y2 = row1.item(y_feature)\n",
+    "    temp = [(x1-x2)**2, (y1-y2)**2]\n",
+    "    return np.sqrt(np.sum(temp))\n",
     "\n",
     "for song in make_array(\"Lookin' for Love\", \"Insane In The Brain\"):\n",
     "    song_distance = distance_two_features(song, \"In Your Eyes\", \"like\", \"love\")\n",
