--- a/project_2ndhalf.ipynb
+++ b/project_2ndhalf.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -679,8 +679,8 @@
     "    x2 = row1.item(x_feature)\n",
     "    y1 = row0.item(y_feature)\n",
     "    y2 = row1.item(y_feature)\n",
-    "    temp = [(x1-x2)**2, (y1-y2)**2]\n",
-    "    return np.sqrt(np.sum(temp))\n",
+    "    temp = [(x1-x2),(y1-y2)]\n",
+    "    return np.linalg.norm(temp)\n",
     "\n",
     "for song in make_array(\"Lookin' for Love\", \"Insane In The Brain\"):\n",
     "    song_distance = distance_two_features(song, \"In Your Eyes\", \"like\", \"love\")\n",
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -712,7 +712,14 @@
     "    This function takes a single argument:\n",
     "     * title: A string, the name of a song.\n",
     "    \"\"\"\n",
-    "    ..."
+    "    row0 = row_for_title(title)\n",
+    "    row1 = row_for_title('In Your Eyes')\n",
+    "    x1 = row0.item('like')\n",
+    "    x2 = row1.item('like')\n",
+    "    y1 = row0.item('love')\n",
+    "    y2 = row1.item('love')\n",
+    "    temp = [(x1-x2),(y1-y2)]\n",
+    "    return np.linalg.norm(temp)\n"
    ]
   },
   {
