--- a/project_2ndhalf.ipynb
+++ b/project_2ndhalf.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "# Set row_sum to a number that's the (approximate) sum of each row of word proportions.\n",
-    "expected_row_sum = ..."
+    "expected_row_sum = 1 #since it is proportions, it should add up to 1.0 or 100%"
    ]
   },
   {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -280,7 +280,7 @@
        "cowboy | cowboy"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "for_assignment_type": "student",
@@ -313,10 +313,21 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72%\n"
+     ]
+    }
+   ],
    "source": [
     "# The staff solution took 3 lines.\n",
-    "unchanged = ...\n",
+    "stem = vocab_mapping['Stem']\n",
+    "word = vocab_mapping['Word']\n",
+    "unchanged = (np.count_nonzero(stem == word)/vocab_mapping.shape[0])*100\n",
+    "unchanged = unchanged[0][0]\n",
     "\n",
     "print(str(round(unchanged)) + '%')"
    ]
@@ -331,18 +342,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'messag'"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set stemmed_message to the stemmed version of \"message\" (which\n",
     "# should be a string).  Use vocab_table.\n",
-    "stemmed_message = ...\n",
+    "stemmed_message = vocab_table.where('Word', are.equal_to('message'))\n",
+    "stemmed_message = stemmed_message.first('Stem')\n",
     "stemmed_message"
    ]
   },
@@ -356,18 +379,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'single'"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set unstemmed_singl to the unstemmed version of \"singl\" (which\n",
     "# should be a string).\n",
-    "unstemmed_singl = ...\n",
+    "unstemmed_singl = vocab_table.where('Word', are.equal_to('single'))\n",
+    "unstemmed_singl = unstemmed_singl.first('Word')\n",
     "unstemmed_singl"
    ]
   },
@@ -417,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -491,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -581,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -595,7 +630,7 @@
        "0.033828944324596891"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -651,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -680,7 +715,7 @@
     "    y1 = row0.item(y_feature)\n",
     "    y2 = row1.item(y_feature)\n",
     "    temp = [(x1-x2),(y1-y2)]\n",
-    "    return np.linalg.norm(temp)\n",
+    "    return np.linalg.norm(temp) #cleaner way of doing np.sqrt(np.sum(np.square(x1-x2, y1-y2)))\n",
     "\n",
     "for song in make_array(\"Lookin' for Love\", \"Insane In The Brain\"):\n",
     "    song_distance = distance_two_features(song, \"In Your Eyes\", \"like\", \"love\")\n",
@@ -697,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -732,14 +767,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Slicker Than Your Average\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_lyrics = lyrics.take(np.arange(num_train))\n",
+    "train_lyrics.select(['Title', 'Artist', 'Genre', 'like', 'love'])\n",
+    "temp = train_lyrics.select(['Title', 'Artist', 'Genre', 'like', 'love'])\n",
+    "close_songs = temp.copy()\n",
+    "print(close_songs.take(0)[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "metadata": {
     "for_assignment_type": "student"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Title</th> <th>Artist</th> <th>Genre</th> <th>like</th> <th>love</th> <th>Distance</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Slicker Than Your Average  </td> <td>Craig David                </td> <td>Hip-hop</td> <td>0.00464396</td> <td>0.00154799</td> <td>0.0584287</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Right There                </td> <td>MF Grimm                   </td> <td>Hip-hop</td> <td>0.0070922 </td> <td>0         </td> <td>0.059718 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Talkin' All That           </td> <td>Cashis                     </td> <td>Hip-hop</td> <td>0.00177305</td> <td>0         </td> <td>0.0603799</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>It Only Hurts Me When I Cry</td> <td>Raul Malo                  </td> <td>Country</td> <td>0         </td> <td>0         </td> <td>0.0607026</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Is It Too Late Now         </td> <td>Lester Flatt & Earl Scruggs</td> <td>Country</td> <td>0         </td> <td>0.0146342 </td> <td>0.0464414</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Greyhound Bound For Nowhere</td> <td>Miranda Lambert            </td> <td>Country</td> <td>0         </td> <td>0.00833333</td> <td>0.0525565</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Nine Pound Hammer          </td> <td>Merle Travis               </td> <td>Country</td> <td>0         </td> <td>0         </td> <td>0.0607026</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Where We At                </td> <td>Jurassic 5                 </td> <td>Hip-hop</td> <td>0.00479616</td> <td>0         </td> <td>0.0599468</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Could You Lie              </td> <td>Alison Krauss              </td> <td>Country</td> <td>0         </td> <td>0.0274725 </td> <td>0.0341908</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Si Nos Quedara Poco Tiempo </td> <td>Chayanne                   </td> <td>Country</td> <td>0         </td> <td>0         </td> <td>0.0607026</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (1173 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "Title                       | Artist                      | Genre   | like       | love       | Distance\n",
+       "Slicker Than Your Average   | Craig David                 | Hip-hop | 0.00464396 | 0.00154799 | 0.0584287\n",
+       "Right There                 | MF Grimm                    | Hip-hop | 0.0070922  | 0          | 0.059718\n",
+       "Talkin' All That            | Cashis                      | Hip-hop | 0.00177305 | 0          | 0.0603799\n",
+       "It Only Hurts Me When I Cry | Raul Malo                   | Country | 0          | 0          | 0.0607026\n",
+       "Is It Too Late Now          | Lester Flatt & Earl Scruggs | Country | 0          | 0.0146342  | 0.0464414\n",
+       "Greyhound Bound For Nowhere | Miranda Lambert             | Country | 0          | 0.00833333 | 0.0525565\n",
+       "Nine Pound Hammer           | Merle Travis                | Country | 0          | 0          | 0.0607026\n",
+       "Where We At                 | Jurassic 5                  | Hip-hop | 0.00479616 | 0          | 0.0599468\n",
+       "Could You Lie               | Alison Krauss               | Country | 0          | 0.0274725  | 0.0341908\n",
+       "Si Nos Quedara Poco Tiempo  | Chayanne                    | Country | 0          | 0          | 0.0607026\n",
+       "... (1173 rows omitted)"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The staff solution took 4 lines.\n",
-    "close_songs = ...\n",
+    "temp = train_lyrics.select(['Title', 'Artist', 'Genre', 'like', 'love'])\n",
+    "close_songs = temp.copy()\n",
+    "\n",
+    "distances = []\n",
+    "for row in np.arange(close_songs.num_rows):\n",
+    "    song = close_songs.take(row)[0][0]\n",
+    "    distance_to_in_your_eyes = distance_two_features(song, \"In Your Eyes\", \"like\", 'love')\n",
+    "    distances.append(distance_to_in_your_eyes)\n",
+    "\n",
+    "close_songs['Distance'] = distances\n",
     "close_songs"
    ]
   },
@@ -753,14 +882,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Country'"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def most_common(column_label, table):\n",
     "    \"\"\"The most common element in a column of a table.\n",
@@ -772,7 +912,7 @@
     "    It returns the most common value in that column of that table.\n",
     "    In case of a tie, it returns one of the most common values, selected\n",
     "    arbitrarily.\"\"\"\n",
-    "    ...\n",
+    "    return table.group(column_label).first(column_label)\n",
     "\n",
     "# Calling most_common on your table of 7 nearest neighbors classifies\n",
     "# \"In Your Eyes\" as a country song, 4 votes to 3.\n",
